# DEVOPS_NOMARK

./: .gitignore  AZURE_IMPLEMENTATION_GUIDE.md  AZURE_NETWORK_SECURITY_AUDIT.md  AZURE_QUICK_START.md  BUSINESS_CONTINUITY_GAPS_ANALYSIS.md  CLAUDE.md  COST_OPTIMIZED_REMEDIATION_PLAN.md  CRITICAL_GAPS_IMPLEMENTATION_ROADMAP.md  EXECUTIVE_SUMMARY_GAPS.md  FIX_CLAUDE_AUTH.md  GAPS_ANALYSIS_INDEX.md  IMPLEMENTATION_GUIDE_START_HERE.md  KEY_VAULT_STATUS.md  PRD_SECURITY_REMEDIATION.md  PROJECT_SELECTOR_SUMMARY.md  QUICK_FIX_GUIDE.md  README_AZURE_DEPLOYMENT.md  README_SECURITY_AUDIT.md  SECURITY_AUDIT_SUMMARY.md  SLACK_PROJECT_SELECTOR_IMPLEMENTATION.md  authenticate-claude-vm.sh  slack-bot-project-selector.py  test-project-selector.sh
.claude/: settings.json
.claude/agents/: infra-specialist.md  mcp-developer.md  qa-verifier.md  security-reviewer.md  workflow-builder.md
.claude/commands/: team-deploy.md  team-infra.md  team-review.md
.claude/hooks/: task-completed-check.sh  teammate-idle-check.sh
.github/workflows/: deploy-devops-agent.yml
config/: projects.json.azure
devops-agent/: .gitignore  DEPLOYMENT_QUICKSTART.md  README.md
devops-agent/docs/: GITHUB_ACTIONS_DEPLOYMENT.md
devops-agent/n8n-workflows/: 01-slack-command-handler.json  02-task-progress-handler.json  (+1 more)
devops-mcp/: MAC_SETUP_GUIDE.md  README.md  pyproject.toml
devops-mcp/config/: claude_desktop_config.json  sample_manifest.json
devops-mcp/devops_mcp/: __init__.py  __main__.py  oauth.py
devops-mcp/devops_mcp/tools/: __init__.py  azure_tools.py  carbone_tools.py  github_tools.py  metabase_tools.py  n8n_tools.py  skills_tools.py  slack_tools.py  supabase_tools.py  vercel_tools.py
devops-mcp/docs/: CLAUDE_PROJECT_INSTRUCTIONS.md  DIAGRAMS.md  WORKFLOW.md
devops-mcp/scripts/: consolidate-skills.sh  extract-skills.sh
devops-mcp/skills/prompts/prd-development/: SKILL.md
flowmetrics-skills/: README.md
nomark-method/: NOMARK.md  README.md
vm-starter-function/: .funcignore  SETUP.md  function_app.py
(+56 files in other folders)
