[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-mcp"
version = "1.0.0"
description = "Model Context Protocol server for DevOps infrastructure management"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "FlowMetrics", email = "devops@flowmetrics.io" }
]
keywords = ["mcp", "devops", "azure", "supabase", "github", "vercel", "n8n"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
sse = [
    "starlette>=0.27.0",
    "uvicorn>=0.24.0",
]
azure = [
    "azure-identity>=1.15.0",
    "azure-mgmt-compute>=30.0.0",
    "azure-mgmt-containerinstance>=10.0.0",
    "azure-keyvault-secrets>=4.7.0",
]
supabase = [
    "supabase>=2.0.0",
]
github = [
    "PyGithub>=2.0.0",
]
all = [
    "devops-mcp[azure,supabase,github,sse]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
devops-mcp = "devops_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/flowmetrics/devops-mcp"
Documentation = "https://github.com/flowmetrics/devops-mcp#readme"
Repository = "https://github.com/flowmetrics/devops-mcp.git"

[tool.hatch.build.targets.wheel]
packages = ["devops_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/devops_mcp",
    "/README.md",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
